--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "react-scripts",
-  "version": "0.8.4",
-  "description": "Configuration and scripts for Create React App.",
-  "repository": "facebookincubator/create-react-app",
+  "name": "react-webextension-scripts",
+  "version": "0.8.6",
+  "description": "Configuration and scripts for Create React WebExtension.",
+  "keywords": [
+    "chrome",
+    "firefox",
+    "webextension",
+    "browser",
+    "extension",
+    "extensions",
+    "react",
+    "create-react-app"
+  ],
+  "repository": "flybayer/create-react-webextension",
   "license": "BSD-3-Clause",
   "engines": {
     "node": ">=4"
   },
   "bugs": {
-    "url": "https://github.com/facebookincubator/create-react-app/issues"
+    "url": "https://github.com/flybayer/create-react-webextension/issues"
   },
   "files": [
     ".babelrc",
@@ -56,7 +66,7 @@
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
-    "react-dev-utils": "^0.4.2",
+    "react-webextension-dev-utils": "^0.4.3",
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
@@ -64,7 +74,8 @@
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "1.0.0",
+    "write-file-webpack-plugin": "^3.4.2"
   },
   "devDependencies": {
     "react": "^15.3.0",
