--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "react-scripts",
+  "name": "react-webextension-scripts",
   "version": "0.7.0",
-  "description": "Configuration and scripts for Create React App.",
-  "repository": "facebookincubator/create-react-app",
+  "description": "Configuration and scripts for Create React WebExtension.",
+  "keywords": [
+    "chrome",
+    "firefox",
+    "webextension",
+    "browser",
+    "extension",
+    "extensions",
+    "react",
+    "create-react-app"
+  ],
+  "repository": "flybayer/create-react-webextension",
   "license": "BSD-3-Clause",
   "engines": {
     "node": ">=4"
   },
   "bugs": {
-    "url": "https://github.com/facebookincubator/create-react-app/issues"
+    "url": "https://github.com/flybayer/create-react-webextension/issues"
   },
   "files": [
     ".babelrc",
@@ -57,7 +67,7 @@
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
-    "react-dev-utils": "^0.3.0",
+    "react-webextension-dev-utils": "^0.3.0",
     "recursive-readdir": "2.1.0",
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
@@ -66,7 +76,8 @@
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "1.0.0",
+    "write-file-webpack-plugin": "^3.4.2"
   },
   "devDependencies": {
     "bundle-deps": "1.0.0",
@@ -110,7 +121,7 @@
     "path-exists",
     "postcss-loader",
     "promise",
-    "react-dev-utils",
+    "react-webextension-dev-utils",
     "recursive-readdir",
     "rimraf",
     "strip-ansi",
@@ -119,6 +130,7 @@
     "webpack",
     "webpack-dev-server",
     "webpack-manifest-plugin",
-    "whatwg-fetch"
+    "whatwg-fetch",
+    "write-file-webpack-plugin"
   ]
 }
