--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-webextension-scripts",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Configuration and scripts for Create React WebExtension.",
   "keywords": [
     "chrome",
@@ -67,7 +67,7 @@
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
-    "react-webextension-dev-utils": "^0.3.0",
+    "react-webextension-dev-utils": "^0.3.1",
     "recursive-readdir": "2.1.0",
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
@@ -111,6 +111,7 @@
     "extract-text-webpack-plugin",
     "file-loader",
     "filesize",
+    "find-cache-dir",
     "fs-extra",
     "gzip-size",
     "html-webpack-plugin",
