feat: add newtab override and background to manifest.json template

--- a/packages/react-scripts/template/public/manifest.json
+++ b/packages/react-scripts/template/public/manifest.json
@@ -4,6 +4,11 @@
   "description": "Fun!",
 
   "chrome_url_overrides": {
+    "newtab": "index.html"
+  },
+  "background": {
+    "scripts": ["static/js/background.bundle.js"],
+    "persistent": false
   },
   "permissions": [
   ],
